Fixed grouping to support overflow scrolling. Adding and fixing InteractiveView.

--- a/assets/basic.css
+++ b/assets/basic.css
@@ -8,7 +8,9 @@ html {
 	box-sizing: border-box;
 	width: 100vw;
 	height: 100vh;
+	max-width: 100vw;
 	max-height: 100vh;
+	overflow: hidden;
 }
 
 body {
@@ -19,6 +21,7 @@ body {
 	flex-direction: column;
 	width: 100vw;
 	height: 100vh;
+	overflow: hidden;
 }
 
 #head {
@@ -165,4 +168,13 @@ label.field {
 /* header */
 .header {
 	margin-right: 1em;
+}
+
+/* InteractiveView */
+.interactive-view {
+	background-color: white;
+	border-style: inset;
+	border-width: 1px;
+	overflow: auto;
+	box-sizing: content-box;
 }
